samples/_failures_safe/1761394155_243227_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cdda6f0.c: In function ‘main’:
./samples/SAFE/__tmp_6cdda6f0.c:145: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6cdda6f0.c:144:9: error: expected declaration or statement at end of input
  144 |         if
      |         ^~
./samples/SAFE/__tmp_6cdda6f0.c:144:9: error: expected declaration or statement at end of input
